[package]
name = "parse-server"
version = "0.1.0"
authors = ["Alex Seferinkin <alexandar.seferinkin@softwaregroup.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mongo-db = []
postgre-db = []

[dependencies]
mongodb = "1.1"
actix-web = "3.0.0-beta.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.1"
log = "*"
bson = "1.1.0"
chrono = "*"
lazy_static = "1.4.0"
